# DarkWeb

./: .dockerignore  .gitignore  CHANGELOG.md  Dark Web Fraud Patterns — Project Review.docx  DarkWeb_Fraud_Agent_Production_AWS_Architecture.html  Dashboard Preview (Light).html  Dashboard Preview.html  Dockerfile  KIRO.md  Makefile  README.md  Requirement details and approaches to solve.docx  STIX_MISP_Explainer.md  _fail_test.py  _run_misp_tests.py  _run_os_tests.py  _run_tests.py  _verify_misp.py  _verify_tagging.py  app.py  architecture.html  cdk.json  commit_v0.2.0.sh  dark_web_fraud_patterns_annotated.xlsx  dashboard.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_enhancement_harness.sh  run_patch_tests.sh
.kiro/hooks/: run-unit-tests.yaml  validate-cdk-syntax.yaml  validate-models.yaml
.kiro/specs/: 01-extended-fraud-taxonomy.md  02-coached-secrecy-severity-boost.md  03-entity-cooccurrence.md  04-cdk-gsi-observability.md  aws-best-practices-remediation.md
.kiro/steering/: aws-conventions.md  code-style.md  project.md
.versions/: architecture_002.html  architecture_004.html
docs/: dark_web_patterns_analysis.md
docs/articles/: aws_builder_center_part1.md  aws_builder_center_part2.md  aws_builder_center_part3.md  technical_review.md
explorer/: index.html  package-lock.json  package.json
explorer/src/: App.tsx  config.ts  main.tsx
src/dark_web_fraud_agent/: __init__.py  pipeline.py
tests/: __init__.py  test_handlers.py
tests/unit/: test_alert_generator.py  test_alert_generator_process.py  test_alert_models.py  test_cdk_core_stack.py  (+35 more)
(+75 files in other folders)
